goa: Fix insufficient function arguments warning

https://bugzilla.gnome.org/show_bug.cgi?id=783042